# befordata_cli

./: .gitignore  pyproject.toml
src/befordata_cli/: __init__.py  cli.py  xdf.py
