[project]
name = "befordata-cli"
readme = "README.md"
version = "0.1.4"
description = "Command-line interface for befordata"
authors = [
    { name = "Oliver Lindemann", email = "lindemann@essb.eur.nl" }
]
requires-python = ">=3.12"
dependencies = [
    "befordata>=0.4.8",
    "icecream>=2.2.0",
    "pyarrow>=24.0.0",
    "pyxdf>=1.17.4",
]

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[project.scripts]
befordata_cli = "befordata_cli.cli:run"